Fix horizontal scroll for index page(part 1)

--- a/source/less/blocks/about.less
+++ b/source/less/blocks/about.less
@@ -44,8 +44,9 @@
 
 @media (min-width: 768px) {
   .about__wrapper {
-    width: 768px;
+    width: 751px;
     padding: 50px;
+    padding-left: 42px;
     padding-bottom: 0;
   }
 
@@ -53,7 +54,7 @@
     .font-set(43px, 700, 50px);
     letter-spacing: -0.2px;
     margin-left: -5px;
-    margin-bottom: 105px;
+    margin-bottom: 104px;
   }
 
   .about__list {
