--- a/source/less/blocks/contact.less
+++ b/source/less/blocks/contact.less
@@ -86,7 +86,7 @@
 
 @media (min-width: 768px) {
   .contact__wrapper {
-    width: 768px;
+    width: 751px;
     padding-top: 60px;
     padding-bottom: 57px;
   }
@@ -131,7 +131,7 @@
 
   .contact__map-wrapper {
     margin-bottom: 49px;
-    width: 768px;
+    width: 751px;
     height: 457px;
 
     background-image: url("../img/map-tablet@1x.jpg");
@@ -143,7 +143,7 @@
   }
 
   .contact__map {
-    width: 768px;
+    width: 751px;
     height: 457px;
   }
 
