--- a/source/less/blocks/cute-things.less
+++ b/source/less/blocks/cute-things.less
@@ -54,7 +54,7 @@
 
 @media (min-width: 768px) {
   .cute-things {
-    padding-top: 153px;
+    padding-top: 155px;
     border-top: 1px solid @gray1;
     background-image: url("../img/hero-tablet@1x.jpg");
     background-repeat: no-repeat;
@@ -69,7 +69,7 @@
   }
 
   .cute-things__wrapper {
-    width: 768px;
+    width: 751px;
   }
 
   .cute-things__title {
@@ -80,7 +80,7 @@
 
   .cute-things__list {
     display: flex;
-    margin-left: 50px;
+    margin-left: 40px;
   }
 
   .cute-things__item {
