--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -59,8 +59,8 @@
 
 @media (min-width: 768px) {
   .feedback__wrapper {
-    width: 768px;
-    padding: 50px;
+    width: 751px;
+    padding: 40px;
     padding-top: 160px;
     padding-bottom: 95px;
     display: flex;
@@ -89,6 +89,7 @@
     .font-set(17px, 700, 20px, @gray4);
     order: 2;
     margin-left: auto;
+    margin-right: 2px;
     margin-top: 3px;
     width: 175px;
     height: 52px;
