--- a/source/less/blocks/good-card.less
+++ b/source/less/blocks/good-card.less
@@ -84,9 +84,9 @@
     text-align: center;
     line-height: 18px;
     margin: 0;
-    margin-top: 11px;
+    margin-top: 12px;
     margin-left: auto;
-    margin-right: 15px;
+    margin-right: 17px;
   }
 
   .good-card__content-wrapper {
