--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -50,7 +50,7 @@
 
 @media (min-width: 768px) {
   .main-nav__wrapper {
-    width: 668px;
+    width: 672px;
   }
 
   .main-nav__toggle {
@@ -68,12 +68,12 @@
 
     &:nth-child(1) {
       padding-left: 0;
-      margin-right: 163px;
+      margin-right: 210px;
     }
 
     &:nth-child(2) {
       order: 4;
-      padding-top: 18px;
+      padding-top: 15px;
 
       a {
         .font-set(15px, 700, 24px);
@@ -82,8 +82,8 @@
 
     &:nth-child(3) {
       order: 5;
-      padding-top: 18px;
-      margin-left: 35px;
+      padding-top: 15px;
+      margin-left: 37px;
 
       a {
         .font-set(15px, 700, 24px);
@@ -108,8 +108,9 @@
     &:nth-child(8) {
       display: list-item;
       order: 5;
-      padding-top: 18px;
+      padding-top: 15px;
       margin-left: auto;
+      margin-right: 3px;
       .font-set(15px, 400, 24px);
     }
 
