--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -6,7 +6,7 @@
 
 @media (min-width: 768px) {
   .page-header {
-    padding-right: 50px;
-    padding-left: 50px;
+    padding-right: 25px;
+    padding-left: 25px;
   }
 }
