--- a/source/less/blocks/top-good.less
+++ b/source/less/blocks/top-good.less
@@ -18,7 +18,7 @@
     padding-right: 0;
     padding-left: 40px;
     padding-top: 40px;
-    padding-bottom: 62px;
+    padding-bottom: 66px;
   }
 }
 
